--- a/src/Modules/CrestApps.OrchardCore.ContentAccessControl/CrestApps.OrchardCore.ContentAccessControl.csproj
+++ b/src/Modules/CrestApps.OrchardCore.ContentAccessControl/CrestApps.OrchardCore.ContentAccessControl.csproj
@@ -6,7 +6,7 @@
     <Description>
       $(CrestAppsDescription)
 
-      Enables you to control access to your content by assigning specific roles, ensuring only authorized users can view or manage items.
+      Enables you to control access to your content by assigning specific roles, ensuring only authorized users can view content items.
     </Description>
     <PackageTags>$(PackageTags) OrchardCoreCMS Content Access Control</PackageTags>
   </PropertyGroup>
