--- a/src/Modules/CrestApps.OrchardCore.Resources/package.json
+++ b/src/Modules/CrestApps.OrchardCore.Resources/package.json
@@ -3,7 +3,9 @@
   "private": true,
   "devDependencies": {
     "vue": "3.5.13",
+    "vuejs": "npm:vue@2.6.13",
     "@fortawesome/fontawesome-free": "6.7.2",
-    "easymde": "2.18.0"
+    "easymde": "2.18.0",
+    "vuedraggable": "2.24.3"
   }
 }
