Migrate to OrchardCore 3.0

--- a/src/Modules/CrestApps.OrchardCore.Roles/CrestApps.OrchardCore.Roles.csproj
+++ b/src/Modules/CrestApps.OrchardCore.Roles/CrestApps.OrchardCore.Roles.csproj
@@ -13,6 +13,7 @@
     <PackageReference Include="OrchardCore.ContentManagement" />
     <PackageReference Include="OrchardCore.ContentTypes.Abstractions" />
     <PackageReference Include="OrchardCore.DisplayManagement" />
+    <PackageReference Include="OrchardCore.Roles.Abstractions" />
   </ItemGroup>
 
   <ItemGroup>
