--- a/NuGet.config
+++ b/NuGet.config
@@ -1,10 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <packageSources>
+    <!-- Ignore global configuration -->
     <clear />
-    <add key="NuGet" value="https://api.nuget.org/v3/index.json" />
-    <add key="OrchardCore" value="https://nuget.cloudsmith.io/orchardcore/preview/v3/index.json" />
+    <add key="nuget.org" value="https://api.nuget.org/v3/index.json" />
+    <add key="OrchardCorePreview" value="https://nuget.cloudsmith.io/orchardcore/preview/v3/index.json" />
   </packageSources>
-
-  <disabledPackageSources />
+  <packageSourceMapping>
+    <packageSource key="nuget.org">
+      <package pattern="*" />
+      <!-- OrchardCore.Translations.All is on a separate repo and doesn't have a preview -->
+      <package pattern="OrchardCore.Translations.*" />
+    </packageSource>
+  </packageSourceMapping>
 </configuration>
