--- a/NuGet.config
+++ b/NuGet.config
@@ -1,16 +1,35 @@
 <?xml version="1.0" encoding="utf-8"?>
 <configuration>
-  <packageSources>
-    <!-- Ignore global configuration -->
-    <clear />
-    <add key="nuget.org" value="https://api.nuget.org/v3/index.json" />
-    <add key="OrchardCorePreview" value="https://nuget.cloudsmith.io/orchardcore/preview/v3/index.json" />
-  </packageSources>
-  <packageSourceMapping>
-    <packageSource key="nuget.org">
-      <package pattern="*" />
-      <!-- OrchardCore.Translations.All is on a separate repo and doesn't have a preview -->
-      <package pattern="OrchardCore.Translations.*" />
-    </packageSource>
-  </packageSourceMapping>
+    <packageSources>
+        <clear />
+        <add key="NuGet" value="https://api.nuget.org/v3/index.json" />
+        <add key="NuGet2" value="https://api.nuget.org/v3/index.json" />
+        <add key="OrchardCorePreview" value="https://nuget.cloudsmith.io/orchardcore/preview/v3/index.json" />
+    </packageSources>
+
+    <packageSourceMapping>
+        <!-- key value for <packageSource> should match key values from <packageSources> element -->
+        <!-- To point OrchardCore to previews, update the packageSource key to OrchardCorePreview. -->
+
+        <packageSource key="NuGet2">
+            <package pattern="OrchardCore.Translations.*" />
+        </packageSource>
+
+        <packageSource key="OrchardCorePreview">
+            <package pattern="OrchardCore.*" />
+            <package pattern="OrchardCore" />
+            <package pattern="TheAdmin" />
+            <package pattern="TheTheme" />
+            <package pattern="TheBlogTheme" />
+            <package pattern="TheAgencyTheme" />
+            <package pattern="SafeMode" />
+            <package pattern="TheComingSoonTheme" />
+        </packageSource>
+
+        <packageSource key="NuGet">
+            <package pattern="*" />
+        </packageSource>
+
+    </packageSourceMapping>
+
 </configuration>
