--- a/src/Modules/CrestApps.OrchardCore.AI/CrestApps.OrchardCore.AI.csproj
+++ b/src/Modules/CrestApps.OrchardCore.AI/CrestApps.OrchardCore.AI.csproj
@@ -38,4 +38,13 @@
     <ProjectReference Include="..\..\Core\CrestApps.OrchardCore.SignalR.Core\CrestApps.OrchardCore.SignalR.Core.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <!-- 
+      Ensure this module directly depends on the required package so that when someone installs it, 
+      they won't need to manually include the Resources. 
+      This guarantees the module functions correctly and resolves the feature dependency.
+    -->
+    <ProjectReference Include="..\CrestApps.OrchardCore.Resources\CrestApps.OrchardCore.Resources.csproj" PrivateAssets="none" />
+  </ItemGroup>
+
 </Project>
