--- a/.github/workflows/backport.yml
+++ b/.github/workflows/backport.yml
@@ -24,3 +24,8 @@ jobs:
         Backport of #%source_pr_number% to %target_branch%
 
         /cc %cc_users%
+    permissions:
+      contents: write
+      pull-requests: write
+      issues: write
+      
