--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -6,12 +6,13 @@
   </PropertyGroup>
   <ItemGroup>
     <!-- Miscellaneous Packages -->
-    <PackageVersion Include="NuGet.Versioning" Version="6.13.2" />
-    <PackageVersion Include="OllamaSharp" Version="5.2.2" />
-    <PackageVersion Include="YesSql.Abstractions" Version="5.3.0" />
-    <PackageVersion Include="YesSql.Core" Version="5.3.0" />
-    <PackageVersion Include="ModelContextProtocol" Version="0.2.0-preview.3" />
-    <PackageVersion Include="ModelContextProtocol.AspNetCore" Version="0.1.0-preview.7" />
+    <PackageVersion Include="JsonSchema.Net" Version="7.4.0" />
+    <PackageVersion Include="NuGet.Versioning" Version="6.14.0" />
+    <PackageVersion Include="OllamaSharp" Version="5.2.3" />
+    <PackageVersion Include="YesSql.Abstractions" Version="5.4.6" />
+    <PackageVersion Include="YesSql.Core" Version="5.4.6" />
+    <PackageVersion Include="ModelContextProtocol" Version="0.3.0-preview.3" />
+    <PackageVersion Include="ModelContextProtocol.AspNetCore" Version="0.3.0-preview.3" />
   </ItemGroup>
   <ItemGroup>
     <!-- OrchardCore Packages -->
@@ -69,10 +70,10 @@
     <PackageVersion Include="Azure.ResourceManager.CognitiveServices" Version="1.4.0" />
     <PackageVersion Include="Microsoft.AspNetCore.SignalR" Version="1.2.0" />
     <PackageVersion Include="Microsoft.AspNetCore.SignalR.Core" Version="1.2.0" />
-    <PackageVersion Include="Microsoft.Extensions.AI" Version="9.5.0" />
-    <PackageVersion Include="Microsoft.Extensions.AI.Abstractions" Version="9.5.0" />
-    <PackageVersion Include="Microsoft.Extensions.AI.OpenAI" Version="9.5.0-preview.1.25265.7" />
-    <PackageVersion Include="Microsoft.Extensions.AI.AzureAIInference" Version="9.5.0-preview.1.25265.7" />
+    <PackageVersion Include="Microsoft.Extensions.AI" Version="9.7.1" />
+    <PackageVersion Include="Microsoft.Extensions.AI.Abstractions" Version="9.7.1" />
+    <PackageVersion Include="Microsoft.Extensions.AI.OpenAI" Version="9.7.1-preview.1.25365.4" />
+    <PackageVersion Include="Microsoft.Extensions.AI.AzureAIInference" Version="9.7.1-preview.1.25365.4" />
   </ItemGroup>
   <ItemGroup>
     <!-- Testing Packages -->
