Auto generate Techinal Name value

--- a/src/Modules/CrestApps.OrchardCore.AI/CrestApps.OrchardCore.AI.csproj
+++ b/src/Modules/CrestApps.OrchardCore.AI/CrestApps.OrchardCore.AI.csproj
@@ -13,6 +13,14 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="Assets\js\technical-name-generator.js" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <EmbeddedResource Include="Assets\js\technical-name-generator.js" />
+  </ItemGroup>
+
+  <ItemGroup>
     <FrameworkReference Include="Microsoft.AspNetCore.App" />
   </ItemGroup>
 
