--- a/src/Modules/CrestApps.OrchardCore.AI.Agent/CrestApps.OrchardCore.AI.Agent.csproj
+++ b/src/Modules/CrestApps.OrchardCore.AI.Agent/CrestApps.OrchardCore.AI.Agent.csproj
@@ -40,10 +40,11 @@
   <ItemGroup>
     <!-- 
       Ensure this module directly depends on the required package so that when someone installs it, 
-      they won't need to manually include the AI. 
+      they won't need to manually include the AI and Recipes. 
       This guarantees the module functions correctly and resolves the feature dependency.
     -->
     <ProjectReference Include="..\CrestApps.OrchardCore.AI\CrestApps.OrchardCore.AI.csproj" PrivateAssets="none" />
+    <ProjectReference Include="..\CrestApps.OrchardCore.Recipes\CrestApps.OrchardCore.Recipes.csproj" PrivateAssets="none" />
   </ItemGroup>
 
 </Project>
